# pygodex

./: .gitignore  Pipfile  README.md  __main__.py  pyproject.toml  pytest.ini
pygodex/: __init__.py  base_dex.py  interpreter.py  pokemon.py  pygodex.py  regex_parser.py  user_dex.py
pygodex/pokedexes/: bla.json  pygodex_base_dex.json
tests/: test_pygodex.py
