[project]
name = "pygodex"
version = "0.1.0"
description = "Pygodex - Python Pokemon Go Pokedex"
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-watcher>=0.6.3",
]
